apps/demo50/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo50
  namespace: demo50
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo50
  template:
    metadata:
      labels:
        app: demo50
    spec:
      containers:
        - name: demo50
          image: 490529426410.dkr.ecr.us-east-1.amazonaws.com/demo50:47e892549e269cadef6c08bf08c5cce2efd9b16f
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 512Mi
