apps/demo50/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo50
  namespace: demo50
spec:
  selector:
    app: demo50
  ports:
    - port: 80
      targetPort: 8080
